TODO: kuake
TODO: depth resource not working(?)
TODO: fix the flaw in the url regex jost pointed out
TODO: look into the selection hilight patch
TODO: implement smartcase-like search in searchable-scrollback
TODO: check wether -depth works as resource
TODO: digital clock gets nuked after searching
TODO: read .Xdefaults even when we have display resources, but give them lower priority
	- add FORCE_UNBUFFERED_XFT define to features.h.
        - double-buffered xft drawing did suffer from pixel offset issues
          when pixmap transparency was enabled.
	- moved on_osc_seq to on_osc_seq_perl and added a more
          generic osc_seq.
        - fix a bug causing double callback invocations when perl hooks
          were invoked recursively.
        - the automove-background extension now properly works when the
          pixmap gets reset with an osc sequence (sqweek).
        - selection-pastebin did not work properly with non-latin1-characters.
        - apply colorUL only when the text colour is the default fg
          (patch by Wu Fengguang).
        - removed rxvtlib.h from the tarball, it had no reason to be there
          (spotted by Decklin Foster).
        - fix compiling with TRANSPARENT but !XPM_BACKGROUND, as reported 
          by omatunto_.
        - slap in a using namespace std, might help on platforms that don't
          follow C++ closely enough.
        - fix mailto url regex, spotted within milliseconds by Jost Krieger.
        - use less "correct" color scaling that is compatible with libX11 and Xft
          (avoids off-by-one colors resulting in striped backgrounds).

7.7  Tue Feb 21 12:32:49 CET 2006
	- use double-buffered drawing (xft fonts only). On many driver/hardware
          combination this actually increases xft drawing speed, at the expense
          of more network bandwidth and slight nausea on the side of the author.
	- readline perl extension now requires shift-click instead of a normal
          click, and eats the click.